bug fix for youtube links not getting wrapped in an anchor

--- a/client/style/chat.css
+++ b/client/style/chat.css
@@ -21,7 +21,7 @@ body{
     height: 50%;
     opacity: 1;
     overflow:hidden;
-    font-family: 'Lucida Console';
+    font-family: 'Lucida Console', 'Operator Mono Book'; /*derek's ubuntu font as a fallback for linux users*/
     font-size: 14px;
     box-shadow: 0px 0px 1px 1px #888888;
     word-wrap:break-word
